# Favbook

./: .env  .env.dev  .env.prod  .gitignore  Readme.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirnments.txt  run_dev_server.sh  start.sh
.sass-cache/cb1f9bb10548a15d529b1aabeff15426e323f742/: forms.scssc
book_forum/: .env.dev  .env.prod  Dockerfile  entrypoint.sh  pyproject.toml
book_forum/book_forum/: asgi.py  settings.py  urls.py  wsgi.py
book_forum/config/: gunicorn_conf.py  middleware.py  settings.py  urls.py
book_forum/forum/: admin.py  filters.py  forms.py  models.py  services.py  urls.py  views.py
book_forum/forum/migrations/: 0001_initial.py  0002_initial.py  0003_alter_book_category_alter_book_slug_and_more.py  0003_discussion_views.py  0004_alter_book_category.py  0004_alter_book_slug_alter_category_slug_and_more.py  0005_alter_book_slug_alter_category_slug_and_more.py  0006_alter_book_cover.py  0007_alter_book_cover.py  0008_alter_discussion_book_and_more.py  0009_book_comment_book_discussion_comment_discussion.py  0010_alter_discussion_comment_answer.py  0011_alter_book_comment_options_and_more.py  0012_alter_book_user_alter_discussion_user_and_more.py
book_forum/forum/tests/: test_models.py  test_services.py  test_views.py
book_forum/home/: filters.py  services.py  urls.py  views.py
book_forum/templates/base/: 404.html  500.html  base.html  (+8 more)
book_forum/user/: Backend.py  admin.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
nginx/: Dockerfile  favbook.conf  nginx.conf
(+164 files in other folders)
